css to stop dblZoom on mobile

--- a/style.css
+++ b/style.css
@@ -57,6 +57,11 @@ justify-content: space-between;
     }
 }
 
+@media (max-width: 430px ) {
+    * {
+        touch-action: manipulation;
+    }
+}
 
 @media (min-width: 431px) {
 .btnP1 {
